--- a/hk25-TropCyc/notebooks/check_tracks.ipynb
+++ b/hk25-TropCyc/notebooks/check_tracks.ipynb
@@ -61,9 +61,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "wcrp_hackathon",
+   "display_name": "1 Python 3 (based on the module python3/2023.01)",
    "language": "python",
-   "name": "wcrp_hackathon"
+   "name": "python3_2023_01"
   },
   "language_info": {
    "codemirror_mode": {
@@ -75,7 +75,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.10"
+   "version": "3.10.10"
   }
  },
  "nbformat": 4,
